webapp/channels/src/components/invitation_modal/invitation_modal.scss
.InvitationModal {
    .modal-dialog {
        @media screen and (min-width: 640px) {
            position: absolute;
            width: 600px;
        }

        top: 50%;
        left: 50%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        margin: auto;
        transform: translate(-50%, -50%) !important;

    }

    .modal-content {
        overflow: hidden;
        max-width: 100%;
    }

    &__header {
        padding-left: 0 !important;
    }

    &__footer {
        padding-right: 0 !important;
    }

    @media screen and (max-width: 768px) {
        display: flex;
        max-height: 100%;

        .modal-body {
            overflow-y: auto !important;
        }
    }
}

